tests/ui/error-codes/E0449.stderr
error[E0449]: unnecessary visibility qualifier
  --> $DIR/E0449.rs:7:1
   |
LL | pub impl Bar {}
   | ^^^ `pub` not permitted here because it's implied
   |
   = note: place qualifiers on individual impl items instead

error[E0449]: unnecessary visibility qualifier
  --> $DIR/E0449.rs:9:1
   |
LL | pub impl Foo for Bar {
   | ^^^ `pub` not permitted here because it's implied

error[E0449]: unnecessary visibility qualifier
  --> $DIR/E0449.rs:10:5
   |
LL |     pub fn foo() {}
   |     ^^^ `pub` not permitted here because it's implied

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0449`.
